# SectionMiner

./: .gitignore  LICENSE  README.md  base.py  build_release.sh  client.py  package.json  prompts.py  pyproject.toml  requirements.txt  tailwind.config.js  test.py  test_gemini.py  test_gemini_litellm.py  test_litellm.py
examples/: api_smoke_test.py  basic_usage.py
sectionminer/: __init__.py  __main__.py  cli.py  client.py  miner.py  prompts.py
sectionminer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sectionminer/server/: __init__.py  app.py  routes.py
sectionminer/server/static/: app.js  styles.css
sectionminer/server/templates/: index.html
