[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sectionminer"
version = "0.1.7"
description = "Extract sections and subsections from academic PDFs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SectionMiner Contributors" }]
license = "MIT"
keywords = ["pdf", "nlp", "llm", "sections", "academic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing",
]
dependencies = [
  "pymupdf",
  "langchain",
  "langchain-openai",
  "langchain-text-splitters",
  "langchain-community",
  "python-decouple",
  "google-genai",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "jinja2",
]

[project.urls]
Homepage = "https://github.com/ehodiogo/SectionMiner"
Repository = "https://github.com/ehodiogo/SectionMiner"

[project.scripts]
sectionminer = "sectionminer.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sectionminer*"]

[tool.setuptools.package-data]
"sectionminer.server" = ["templates/*.html", "static/*.js", "static/*.css"]

